@@ -1,5 +1,6 @@
 AC_INIT(sim_client.c)
 CONFIG_RULES
 AC_PROG_INSTALL
+AC_CHECK_HEADERS(stdlib.h)
 V5_USE_SHARED_LIB
 V5_AC_OUTPUT_MAKEFILE
