@@ -1,3 +1,9 @@
+Wed Jun 28 13:27:17 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* sim_client.c: Include stdlib.h or declare malloc.
+		Include string.h for strlen and memcpy defintions.
+
+	* configure.in: Check for stdlib.h.
 
 Thu Jun 15 17:39:54 EDT 1995	Paul Park	(pjpark@mit.edu)
 	* Makefile.in - Change explicit library names to -l<lib> form, and
